tests/neg/indentation.stk
fun test =
  val a =
    3 * (5 +                  // error
         6
        )
        -
        4


  val b =
    20 - (                   // error
      4 + 6) * 5

  val c =
      20 - (                 // error
    4 + 6) * 5

fun fact(n: Int) =
  if 0 == n then 1
  else fact (n - 1) * n

fun fact1(n: Int) =
  if 0 == n then 1
    else fact1 (n - 1) * n   // error

fun foo() =
    4 p
  5 p          // error
    6 p
      7 p      // expression continues to this line

fun phraseIndent =
  println "hello" allow stdin
    if 3 > 5 then println "error"   // error

fun fact2(n: Int) =
  if 0 == n then 1
  else fact2 (n - 1) * n
     end                    // error
